# ComputerVision

./: README.md
HW2/: HW2.tex
lab0/: lab0.m
lab1/src/: hello_sunflowers.cpp
lab2/: CMakeLists.txt
lab2/include/: saturatedColorHistogram.hh
lab2/src/: compare_two_color_histograms.cc  example_code_for_reference.cpp  saturatedColorHistogram.cc
lab3/: CMakeLists.txt  fit_points_to_plane.m  main.cpp
lab4/: CMakeLists.txt  align_faces.py  create_csv.py  facerec_eigenfaces.cpp  lab4.csv
lab5/: CMakeLists.txt  camera_calibration.cpp  in_VID5.xml  out_camera_data.xml
lab6/: CMakeLists.txt  lab_homography_donald.cpp
lab_dftDemo/: hybrid_images_template.m
